--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </div>
 
   <div class="title">
-    <h1>Welcome!</h1>
-  </div
+    <h1>Welcome to a picky persons paradise</h1>
+  </div>
 
   <script src="script.js"></script>
 </body>
