--- a/index.html
+++ b/index.html
@@ -16,15 +16,22 @@
 <body>
   <div class="topbar" style="margin-bottom: 10px;">
       <a style="margin-left: -3px; font-family: 'Pacifico', cursive;">JustNuttyEnough</a>
-      <a href="/shop" style="color: black;">Shop</a>
+      <a href="shop.html" style="color: black;">Shop</a>
       <a style="float: right;">Contact Us</a>
   </div>
 
   <div class="title">
-    <h1>Welcome!</h1>
-  </div
+    <h1>Welcome to a picky persons paradise</h1>
+  </div>
 
   <script src="script.js"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-RJT5EK96EJ');
+  </script>
 </body>
 
 </html>
