--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="application-name" content="JustNuttyEnough">
+  <meta name="title" content="JustNuttyEnough | A Picky Person's Paradise">
+  <meta name="description" content="Justnuttyenough ... more stuff here">
+  <meta name="keywords" content="snack mix, montana, snacks montana, just nutty enough, just, nutty, enough, justnuttyenough">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="1 days">
   <title>JustNuttyEnough | Home</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
