--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <title>JustNuttyEnough | Home</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <meta name="title" content="JustNuttyEnough | A Picky Person's Paradise">
+  <meta name="description" content="Justnuttyenough ... more stuff here">
+  <meta name="keywords" content="snack mix, montana, snacks montana, just nutty enough, just, nutty, enough, justnuttyenough">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="1 days">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
