--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="topbar" style="margin-bottom: 10px;">
       <a style="margin-left: -3px; font-family: 'Pacifico', cursive;">JustNuttyEnough</a>
       <a href="/shop" style="color: black;">Shop</a>
-      <a style="float: right;">Contact Us</a>
+      <a href="/contact/" style="color:black; float: right;">Contact Us</a>
   </div>
 
   <div class="title">
