--- a/shop/index.html
+++ b/shop/index.html
@@ -19,7 +19,7 @@
   <div class="topbar" style="margin-bottom: 10px;">
       <a style="color: black; font-family: 'Pacifico', cursive;" href="/index.html">JustNuttyEnough</a>
       <a>Shop</a>
-      <a style="float: right;">Contact Us</a>
+      <a href="/contact/" style="float: right; color: black;">Socials</a>
   </div>
 
   <div class="title">
@@ -84,6 +84,7 @@
 
   
   <script src="script.js"></script>
+  <script src="/script.js"</script></script>
 </body>
 
 </html>
