--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="application-name" content="JustNuttyEnough">
   <title>JustNuttyEnough | Home</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="/external/rainbow-text.css" rel="stylesheet" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <meta name="title" content="JustNuttyEnough | A Picky Person's Paradise">
   <meta name="description" content="Justnuttyenough ... more stuff here">
@@ -28,7 +29,7 @@
   </div>
 
   <div class="title">
-    <h1>Welcome to a picky persons paradise</h1>
+    <h1>Welcome to a picky persons <b>paradise</b></h1>
   </div>
 
   <script src="script.js"></script>
