--- a/shop/index.html
+++ b/shop/index.html
@@ -29,8 +29,9 @@
   <div class="content">
     <div class="item">
       <img>
-      <hr>
       <h>St. Joseph Peak Mountain Mix</h>
+      <hr>
+      <code id="p1"></code>
       <br>
       <button onclick="subfromcart(1)">-</button>
       <input type="number" id="item1_num" style="width: 20%;">
@@ -39,8 +40,9 @@
     </div>
     <div class="item">
       <img>
-      <hr>
       <h>Summer Mix</h>
+      <hr>
+      <code id="p2"></code>
       <br>
       <button onclick="subfromcart(2)">-</button>
       <input type="number" id="item2_num" style="width: 20%;">
@@ -51,8 +53,9 @@
 
     <div class="item">
       <img>
-      <hr>
       <h>Saturday Morning</h>
+      <hr>
+      <code id="p3"></code>
       <br>
       <button onclick="subfromcart(3)">-</button>
       <input type="number" id="item3_num" style="width: 20%;">
@@ -63,8 +66,9 @@
 
     <div class="item">
       <img>
-      <hr>
       <h>Pharoplex Movie Theater</h>
+      <hr>
+      <code id="p4"></code>
       <br>
       <button onclick="subfromcart(4)">-</button>
       <input type="number" id="item4_num" style="width: 20%;">
