pre cms linking submission

--- a/contact/index.html
+++ b/contact/index.html
@@ -2,6 +2,14 @@
 <html>
 
 <head>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-RJT5EK96EJ');
+  </script>
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="application-name" content="JustNuttyEnough">
@@ -27,10 +35,13 @@
       <a style="float: right;">Socials</a>
   </div>
 
-  <div class="title">
+  <div class="con_title">
     <h1>Get in Touch!</h1>
     <img src="https://img.icons8.com/material-outlined/48/null/instagram-new--v1.png" width="50"/>
     <img src="https://img.icons8.com/ios/50/null/composing-mail.png" width="45" height="50"/>
+  </div>
+
+  <div class="con_title">
   </div>
 
   <script src="/script.js"></script>
