--- a/shop/index.html
+++ b/shop/index.html
@@ -2,6 +2,14 @@
 <html>
 
 <head>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-RJT5EK96EJ');
+  </script>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="application-name" content="JustNuttyEnough">
