--- a/shop/index.html
+++ b/shop/index.html
@@ -9,18 +9,22 @@
   
     gtag('config', 'G-RJT5EK96EJ');
   </script>
+  <script src="https://www.paypal.com/sdk/js?client-id=CLIENT_ID"></script>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <meta name="application-name" content="JustNuttyEnough">
+  <link rel="stylesheet" href="checkout.css" />
+  <script src="https://js.stripe.com/v3/"></script>
+  <script src="checkout.js" defer></script>
   <title>JustNuttyEnough | Shop</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -91,10 +95,7 @@
       <code>$</code>
       <code class="tp" id="tp">0.00</code>
     </div>
-  </div>
 
-
-  
   <script src="script.js"></script>
   <script src="/script.js"</script></script>
 </body>
