--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
  <body> 
    <div class="topbar" style="margin-bottom: 10px;"> 
        <a style="margin-left: -3px; font-family: 'Pacifico', cursive;">JustNuttyEnough</a> 
-       <a href="/shop" style="color: black;">Shop</a> 
+       <a href="shop.htmp" style="color: black;">Shop</a> 
        <a href="/contact/" style="color:black; float: right;">Socials</a> 
    </div> 
   
