--- a/contact/index.html
+++ b/contact/index.html
@@ -31,7 +31,7 @@
 <body>
   <div class="topbar" style="margin-bottom: 10px;">
       <a href="/" style="color:black; margin-left: -3px; font-family: 'Pacifico', cursive;">JustNuttyEnough</a>
-      <a href="/shop" style="color: black;">Shop</a>
+      <a href="/shop.html" style="color: black;">Shop</a>
       <a style="float: right;">Socials</a>
   </div>
 
