--- a/shop.html
+++ b/shop.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html>
+    <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="application-name" content="JustNuttyEnough">
+    <title>JustNuttyEnough | Shop</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,700&display=swap" rel="stylesheet">
+    </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <meta name="application-name" content="JustNuttyEnough">
-  <title>JustNuttyEnough | Shop</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,700&display=swap" rel="stylesheet">
-</head>
+    <body>
+        <div class="topbar" style="margin-bottom: 10px;">
+            <a style="color: black; font-family: 'Pacifico', cursive;" href="/index.html">JustNuttyEnough</a>
+            <a>Shop</a>
+            <a style="float: right;" href="/contact/Contact Us"></a>
+        </div>
 
-<body>
-  <div class="topbar" style="margin-bottom: 10px;">
-      <a style="color: black; font-family: 'Pacifico', cursive;" href="/index.html">JustNuttyEnough</a>
-      <a>Shop</a>
-      <a style="float: right;" href="/contact/>Contact Us</a>
-  </div>
-
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeihX-MK-rOnNcl68wgtKT4l9q3jPFrh2ov9kxnfztRAmGI9w/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0" style="margin: auto; width: 100%;">Loading…</iframe>
-  <p>This order form is temporary! We are currently developing a way to order our snack mixes in this site! But for now, it is in person and cash only...</p>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJT5EK96EJ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', 'G-RJT5EK96EJ');
-  </script>
-</body>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeihX-MK-rOnNcl68wgtKT4l9q3jPFrh2ov9kxnfztRAmGI9w/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0" style="margin: auto; width: 100%;">Loading…</iframe>
+    <p>This order form is temporary! We are currently developing a way to order our snack mixes in this site! But for now, it is in person and cash only...</p>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RJT5EK96EJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    
+        gtag('config', 'G-RJT5EK96EJ');
+    </script>
+    </body>
 </html>
