--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@
         <div class="topbar" style="margin-bottom: 10px;">
             <a style="color: black; font-family: 'Pacifico', cursive;" href="/index.html">JustNuttyEnough</a>
             <a>Shop</a>
-            <a style="float: right;" href="/contact/Contact Us"></a>
+            <a href="/contact" style="color:black; float: right;">Socials</a> 
         </div>
 
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeihX-MK-rOnNcl68wgtKT4l9q3jPFrh2ov9kxnfztRAmGI9w/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0" style="margin: auto; width: 100%;">Loading…</iframe>
